--- a/public/pages/studentCourses.html
+++ b/public/pages/studentCourses.html
@@ -36,11 +36,11 @@
             <i class="fas fa-book"></i>
             <span>My Courses</span>
           </a>
-          <a href="#" class="menu-item announcements">
+          <a href="../pages/announcements.html" class="menu-item announcements">
             <i class="fas fa-bullhorn"></i>
             <span>Announcements</span>
           </a>
-          <a href="#" class="menu-item quiz">
+          <a href="../pages/" class="menu-item quiz">
             <i class="fas fa-tasks"></i>
             <span>Quizzes</span>
           </a>
@@ -54,11 +54,11 @@
           </a>
 
           <div class="menu-heading">Calendar</div>
-          <a href="#" class="menu-item">
+          <a href="../pages/schedule.html" class="menu-item">
             <i class="fas fa-calendar-alt"></i>
             <span>Schedule</span>
           </a>
-          <a href="#" class="menu-item">
+          <a href="../pages/deadlines.html" class="menu-item">
             <i class="fas fa-clock"></i>
             <span>Deadlines</span>
           </a>
@@ -72,7 +72,7 @@
             <i class="fas fa-cog"></i>
             <span>Settings</span>
           </a>
-          <a href="#" class="menu-item">
+          <a href="../pages/landingpage.html" class="menu-item">
             <i class="fas fa-sign-out-alt"></i>
             <span>Logout</span>
           </a>
