--- a/public/pages/studentDash.html
+++ b/public/pages/studentDash.html
@@ -630,8 +630,7 @@
         font-weight: 600;
         margin-bottom: 10px;
         display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
+        
         overflow: hidden;
       }
 
@@ -1327,7 +1326,7 @@
             <i class="fas fa-book"></i>
             <span>My Courses</span>
           </a>
-          <a href="#" class="menu-item announcements">
+          <a href="../pages/announcements.html" class="menu-item announcements">
             <i class="fas fa-bullhorn"></i>
             <span>Announcements</span>
           </a>
@@ -1345,17 +1344,17 @@
           </a>
 
           <div class="menu-heading">Calendar</div>
-          <a href="#" class="menu-item">
+          <a href="../pages/schedule.html" class="menu-item">
             <i class="fas fa-calendar-alt"></i>
             <span>Schedule</span>
           </a>
-          <a href="#" class="menu-item">
+          <a href="../pages/deadlines.html" class="menu-item">
             <i class="fas fa-clock"></i>
             <span>Deadlines</span>
           </a>
 
           <div class="menu-heading">Settings</div>
-          <a href="#" class="menu-item">
+          <a href="../pages/profile.html" class="menu-item">
             <i class="fas fa-user-cog"></i>
             <span>Profile</span>
           </a>
@@ -1363,7 +1362,7 @@
             <i class="fas fa-cog"></i>
             <span>Settings</span>
           </a>
-          <a href="#" class="menu-item">
+          <a href="../pages/student-login.html" class="menu-item">
             <i class="fas fa-sign-out-alt"></i>
             <span>Logout</span>
           </a>
