--- a/public/pages/deadlines.html
+++ b/public/pages/deadlines.html
@@ -269,7 +269,7 @@
                 <i class="fas fa-bullhorn"></i>
                 <span>Announcements</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="../pages/quizPage.html" class="menu-item">
                 <i class="fas fa-tasks"></i>
                 <span>Quizzes</span>
             </a>
@@ -277,7 +277,7 @@
                 <i class="fas fa-chart-line"></i>
                 <span>Performance</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="../pages/libraryPage.html" class="menu-item">
                 <i class="fas fa-book-open"></i>
                 <span>Library</span>
             </a>
