--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -534,9 +534,9 @@
                 <a href="../pages/studentDash.html"><i class="fas fa-home"></i> <span>Dashboard</span></a>
                 <a href="../pages/studentCourses.html"><i class="fas fa-book"></i> <span>My Courses</span></a>
                 <a href="../pages/announcements.html"><i class="fas fa-bullhorn"></i> <span>Announcements</span></a>
-                <a href="#"><i class="fas fa-tasks"></i> <span>Quizzes</span></a>
-                <a href="#"><i class="fas fa-chart-line"></i> <span>Performance</span></a>
-                <a href="#"><i class="fas fa-book-open"></i> <span>Library</span></a>
+                <a href="../pages/quizPage.html"><i class="fas fa-tasks"></i> <span>Quizzes</span></a>
+                <a href=""><i class="fas fa-chart-line"></i> <span>Performance</span></a>
+                <a href="../pages/libraryPage.html"><i class="fas fa-book-open"></i> <span>Library</span></a>
             </div>
         </div>
         
