--- a/public/pages/studentCourses.html
+++ b/public/pages/studentCourses.html
@@ -48,7 +48,7 @@
             <i class="fas fa-chart-line"></i>
             <span>Performance</span>
           </a>
-          <a href="#" class="menu-item library">
+          <a href="../pages/libraryPage.html" class="menu-item library">
             <i class="fas fa-book-open"></i>
             <span>Library</span>
           </a>
@@ -64,7 +64,7 @@
           </a>
 
           <div class="menu-heading">Settings</div>
-          <a href="#" class="menu-item">
+          <a href="../pages/profile.html" class="menu-item">
             <i class="fas fa-user-cog"></i>
             <span>Profile</span>
           </a>
