--- a/public/pages/libraryPage.html
+++ b/public/pages/libraryPage.html
@@ -669,15 +669,15 @@
             <i class="fas fa-home"></i>
             Dashboard
         </a>
-        <a href="#" class="menu-item">
+        <a href="../pages/studentCourses.html" class="menu-item">
             <i class="fas fa-book"></i>
             My Courses
         </a>
-        <a href="#" class="menu-item">
+        <a href="../pages/announcements.html" class="menu-item">
             <i class="fas fa-bullhorn"></i>
             Announcements
         </a>
-        <a href="./quizPage.html" class="menu-item">
+        <a href="../pages/quizPage.html" class="menu-item">
             <i class="fas fa-clipboard-list"></i>
             Quizzes
         </a>
@@ -685,7 +685,7 @@
             <i class="fas fa-chart-line"></i>
             Performance
         </a>
-        <a href="#" class="menu-item active">
+        <a href="../pages/libraryPage.html" class="menu-item active">
             <i class="fas fa-book-open"></i>
             Library
         </a>
