--- a/public/pages/teacherAnalysis.html
+++ b/public/pages/teacherAnalysis.html
@@ -487,11 +487,11 @@
         <div class="sidebar">
             <div class="logo">Padhakoo</div>
             <div class="menu-category">MAIN MENU</div>
-            <a href="#" class="menu-item">
+            <a href="teacherDash.html" class="menu-item">
                 <i>🏠</i>
                 <span>Dashboard</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="teacherCourse.html" class="menu-item">
                 <i>📚</i>
                 <span>My Courses</span>
             </a>
@@ -548,8 +548,9 @@
             <div class="navbar">
                 <button class="menu-toggle">☰</button>
                 <div class="nav-links">
-                    <a href="#" class="nav-link">Courses</a>
-                    <a href="#" class="nav-link">Dashboard</a>
+                    <a href="teacherCourse.html" class="nav-link">Courses</a>
+                    <a href="teacher" class="nav-link">Dashboard</a>
+                    <a href="teacherDash.html" class="nav-link">Dashboard</a>
                     <a href="#" class="nav-link">Students</a>
                     <a href="#" class="nav-link active">Analytics</a>
                 </div>
