--- a/public/pages/teacherCourse.html
+++ b/public/pages/teacherCourse.html
@@ -62,7 +62,7 @@
       <i class="fas fa-users"></i>
       <span>Students</span>
     </a>
-    <a href="#" class="menu-item">
+    <a href="teacherAnalysis.html" class="menu-item">
       <i class="fas fa-chart-line"></i>
       <span>Analytics</span>
     </a>
