--- a/public/pages/teacher-login.html
+++ b/public/pages/teacher-login.html
@@ -47,6 +47,9 @@
           Don't have an account?
           <a href="#" id="toggle-form">Sign up here</a>
         </p>
+        <div class="back-to-home">
+            <a href="../pages/landingpage.html"><span style="font-size: 1.2em;">←</span> Back to Homepage</a>
+          </div>
       </form>
     </div>
 
