--- a/public/pages/studentDash.html
+++ b/public/pages/studentDash.html
@@ -1334,7 +1334,7 @@
             <i class="fas fa-tasks"></i>
             <span>Quizzes</span>
           </a>
-          <a href="#" class="menu-item performance">
+          <a href="./studentPerformance.html" class="menu-item performance">
             <i class="fas fa-chart-line"></i>
             <span>Performance</span>
           </a>
