--- a/public/pages/teacherAnalysis.html
+++ b/public/pages/teacherAnalysis.html
@@ -495,17 +495,17 @@
                 <i>📚</i>
                 <span>My Courses</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="teacherStudents.html" class="menu-item">
                 <i>👥</i>
                 <span>Students</span>
             </a>
-            <a href="#" class="menu-item active">
+            <a href="teacherAnalysis.html" class="menu-item active">
                 <i>📊</i>
                 <span>Analytics</span>
             </a>
             
             <div class="menu-category">COMMUNICATION</div>
-            <a href="#" class="menu-item">
+            <a href="teacherAnnouncement.html" class="menu-item">
                 <i>📢</i>
                 <span>Announcements</span>
             </a>
@@ -551,8 +551,8 @@
                     <a href="teacherCourse.html" class="nav-link">Courses</a>
                     <a href="teacher" class="nav-link">Dashboard</a>
                     <a href="teacherDash.html" class="nav-link">Dashboard</a>
-                    <a href="#" class="nav-link">Students</a>
-                    <a href="#" class="nav-link active">Analytics</a>
+                    <a href="teacherStudents.html" class="nav-link">Students</a>
+                    <a href="teacherAnalysis.html" class="nav-link active">Analytics</a>
                 </div>
                 <div class="nav-controls">
                     <button class="theme-toggle">🌙</button>
