--- a/public/pages/teacherCourse.html
+++ b/public/pages/teacherCourse.html
@@ -24,7 +24,7 @@
         <ul>
           <li><a href="teacherCourse.html" class="active">Courses</a></li>
           <li><a href="teacherDash.html">Dashboard</a></li>
-          <li><a href="#">Students</a></li>
+          <li><a href="teacherStudents.html">Students</a></li>
           <li><a href="#">Analytics</a></li>
         </ul>
       </nav>
@@ -58,7 +58,7 @@
       <i class="fas fa-book"></i>
       <span>My Courses</span>
     </a>
-    <a href="#" class="menu-item">
+    <a href="teacherStudents.html" class="menu-item">
       <i class="fas fa-users"></i>
       <span>Students</span>
     </a>
@@ -67,7 +67,7 @@
       <span>Analytics</span>
     </a>
     <div class="menu-heading">COMMUNICATION</div>
-    <a href="#" class="menu-item">
+    <a href="teacherAnnouncement.html" class="menu-item">
       <i class="fas fa-bullhorn"></i>
       <span>Announcements</span>
     </a>
