--- a/public/pages/teacherAnalysis.html
+++ b/public/pages/teacherAnalysis.html
@@ -700,6 +700,8 @@
                         </div>
                         <div class="accordion-content open">
                             <div class="chart-container">
+                                <img src="../images/eng.png" alt="Student Engagement Graph"
+                 style="width: 100%; max-height: 300px; object-fit: contain; margin-bottom: 1rem;">
                                 <canvas id="engagementChart"></canvas>
                             </div>
                         </div>
@@ -718,6 +720,8 @@
                         </div>
                         <div class="accordion-content open">
                             <div class="chart-container">
+                                <img src="../images/metrix.png" alt="Student Engagement Graph"
+                 style="width: 100%; max-height: 300px; object-fit: contain; margin-bottom: 1rem;">
                                 <canvas id="performanceChart"></canvas>
                             </div>
                         </div>
