--- a/public/pages/teacherAnalysis.html
+++ b/public/pages/teacherAnalysis.html
@@ -513,7 +513,7 @@
                 <i>💬</i>
                 <span>Messages</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="teacherCalendar.html" class="menu-item">
                 <i>📅</i>
                 <span>Calendar</span>
             </a>
