--- a/public/pages/teacherAnalysis.html
+++ b/public/pages/teacherAnalysis.html
@@ -487,43 +487,43 @@
         <div class="sidebar">
             <div class="logo">Padhakoo</div>
             <div class="menu-category">MAIN MENU</div>
-            <a href="teacherDash.html" class="menu-item">
+            <a href="./teacherDash.html" class="menu-item">
                 <i>🏠</i>
                 <span>Dashboard</span>
             </a>
-            <a href="teacherCourse.html" class="menu-item">
+            <a href="./teacherCourse.html" class="menu-item">
                 <i>📚</i>
                 <span>My Courses</span>
             </a>
-            <a href="teacherStudents.html" class="menu-item">
+            <a href="./teacherStudents.html" class="menu-item">
                 <i>👥</i>
                 <span>Students</span>
             </a>
-            <a href="teacherAnalysis.html" class="menu-item active">
+            <a href="./teacherAnalysis.html" class="menu-item active">
                 <i>📊</i>
                 <span>Analytics</span>
             </a>
             
             <div class="menu-category">COMMUNICATION</div>
-            <a href="teacherAnnouncement.html" class="menu-item">
+            <a href="./teacherAnnouncement.html" class="menu-item">
                 <i>📢</i>
                 <span>Announcements</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="./messages.html" class="menu-item">
                 <i>💬</i>
                 <span>Messages</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="./teacherCalendar" class="menu-item">
                 <i>📅</i>
                 <span>Calendar</span>
             </a>
             
             <div class="menu-category">ASSESSMENT</div>
-            <a href="#" class="menu-item">
+            <a href="./teacherCourse.html" class="menu-item">
                 <i>📝</i>
                 <span>Assignments</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="./teacherCourse.html" class="menu-item">
                 <i>✓</i>
                 <span>Quizzes</span>
             </a>
