--- a/public/pages/teacherDash.html
+++ b/public/pages/teacherDash.html
@@ -1974,20 +1974,20 @@
           <i class="fas fa-bullhorn"></i>
           <span>Announcements</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="./messages.html" class="menu-item">
           <i class="fas fa-comment-alt"></i>
           <span>Messages</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="./teacherCalendar.html" class="menu-item">
           <i class="fas fa-calendar-alt"></i>
           <span>Calendar</span>
         </a>
         <div class="menu-heading">ASSESSMENT</div>
-        <a href="#" class="menu-item">
+        <a href="./teacherCourse.html" class="menu-item">
           <i class="fas fa-tasks"></i>
           <span>Assignments</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="./teacherCourse.html" class="menu-item">
           <i class="fas fa-puzzle-piece"></i>
           <span>Quizzes</span>
         </a>
