--- a/public/pages/teacherAnnouncement.html
+++ b/public/pages/teacherAnnouncement.html
@@ -531,37 +531,37 @@
         <i class="fas fa-home"></i>
         <span>Dashboard</span>
       </a>
-      <a href="teacherCourse.html" class="menu-item">
+      <a href="./teacherCourse.html" class="menu-item">
         <i class="fas fa-book"></i>
         <span>My Courses</span>
       </a>
-      <a href="teacherStudents.html" class="menu-item">
+      <a href="./teacherStudents.html" class="menu-item">
         <i class="fas fa-users"></i>
         <span>Students</span>
       </a>
-      <a href="teacherAnalysis.html" class="menu-item">
+      <a href="./teacherAnalysis.html" class="menu-item">
         <i class="fas fa-chart-line"></i>
         <span>Analytics</span>
       </a>
       <div class="menu-heading">COMMUNICATION</div>
-      <a href="teacherAnnouncement.html" class="menu-item active">
+      <a href="./teacherAnnouncement.html" class="menu-item active">
         <i class="fas fa-bullhorn"></i>
         <span>Announcements</span>
       </a>
-      <a href="#" class="menu-item">
+      <a href="./messages.html" class="menu-item">
         <i class="fas fa-comment-alt"></i>
         <span>Messages</span>
       </a>
-      <a href="#" class="menu-item">
+      <a href="./teacherCalendar" class="menu-item">
         <i class="fas fa-calendar-alt"></i>
         <span>Calendar</span>
       </a>
       <div class="menu-heading">ASSESSMENT</div>
-      <a href="#" class="menu-item">
+      <a href="./teacherCourse.html" class="menu-item">
         <i class="fas fa-tasks"></i>
         <span>Assignments</span>
       </a>
-      <a href="#" class="menu-item">
+      <a href="./teacherCourse.html" class="menu-item">
         <i class="fas fa-puzzle-piece"></i>
         <span>Quizzes</span>
       </a>
