--- a/public/pages/teacherCalendar.html
+++ b/public/pages/teacherCalendar.html
@@ -877,11 +877,11 @@
         <span>Calendar</span>
       </a>
       <div class="menu-heading">ASSESSMENT</div>
-      <a href="#" class="menu-item">
+      <a href="teacherCourse.html" class="menu-item">
         <i class="fas fa-tasks"></i>
         <span>Assignments</span>
       </a>
-      <a href="#" class="menu-item">
+      <a href="teacherCourse.html" class="menu-item">
         <i class="fas fa-puzzle-piece"></i>
         <span>Quizzes</span>
       </a>
