--- a/public/pages/teacherAnalysis.html
+++ b/public/pages/teacherAnalysis.html
@@ -532,10 +532,10 @@
                 <span>Leaderboards</span>
             </a>
             
-            <div class="menu-category">SETTINGS</div>
-            <a href="#" class="menu-item">
-                <i>⚙️</i>
-                <span>Settings</span>
+            <div class="menu-heading">Logout</div>
+      <a href="teacher-login.html" class="menu-item">
+        <i class="fas fa-cog"></i>
+        <span>Logout</span>
             </a>
         </div>
         
