--- a/public/pages/teacherAnnouncement.html
+++ b/public/pages/teacherAnnouncement.html
@@ -569,10 +569,10 @@
         <i class="fas fa-trophy"></i>
         <span>Leaderboards</span>
       </a>
-      <div class="menu-heading">SETTINGS</div>
-      <a href="#" class="menu-item">
+      <div class="menu-heading">Logout</div>
+      <a href="teacher-login.html" class="menu-item">
         <i class="fas fa-cog"></i>
-        <span>Settings</span>
+        <span>Logout</span>
       </a>
       <a href="#" class="menu-item">
         <i class="fas fa-question-circle"></i>
