--- a/public/pages/announcements.html
+++ b/public/pages/announcements.html
@@ -245,7 +245,7 @@
                 <i class="fas fa-tasks"></i>
                 <span>Quizzes</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="./studentPerformance.html" class="menu-item">
                 <i class="fas fa-chart-line"></i>
                 <span>Performance</span>
             </a>
