--- a/public/pages/teacherDash.html
+++ b/public/pages/teacherDash.html
@@ -1995,10 +1995,10 @@
           <i class="fas fa-trophy"></i>
           <span>Leaderboards</span>
         </a>
-        <div class="menu-heading">SETTINGS</div>
-        <a href="#" class="menu-item">
-          <i class="fas fa-cog"></i>
-          <span>Settings</span>
+        <div class="menu-heading">Logout</div>
+      <a href="teacher-login.html" class="menu-item">
+        <i class="fas fa-cog"></i>
+        <span>Logout</span>
         </a>
         <a href="#" class="menu-item">
           <i class="fas fa-question-circle"></i>
