--- a/public/pages/adminDash.html
+++ b/public/pages/adminDash.html
@@ -472,9 +472,9 @@
                 <i class="fas fa-lock"></i>
                 <span>Access Control</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="./admin-login.html" class="nav-item">
                 <i class="fas fa-history"></i>
-                <span>Logs</span>
+                <span>Logout</span>
             </a>
         </div>
 
