--- a/public/pages/teacherDash.html
+++ b/public/pages/teacherDash.html
@@ -2024,7 +2024,7 @@
         </button>
         <div class="user-profile">
           <img
-            src="/api/placeholder/40/40"
+          src="profile.jpeg"
             alt="User Avatar"
             class="user-avatar"
           />
