--- a/public/pages/messages.html
+++ b/public/pages/messages.html
@@ -159,7 +159,7 @@
       justify-content: center;
     }
     
-    .user-profile {
+    /* .user-profile {
       width: 40px;
       height: 40px;
       border-radius: 50%;
@@ -169,7 +169,22 @@
       align-items: center;
       justify-content: center;
       font-weight: bold;
-    }
+    } */
+
+    user-profile {
+    width: 10px;   /* or your preferred width */
+    height: 10px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.user-profile img {
+    width: 20%;
+    height: 20%;
+    border-radius: 50%;
+      overflow: hidden;
+    object-fit: cover;
+}
     
     .messages-container {
       display: flex;
@@ -589,7 +604,7 @@
           <button id="theme-toggle" class="theme-toggle">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="sun-icon"><circle cx="12" cy="12" r="5"></circle><line x1="12" y1="1" x2="12" y2="3"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line><line x1="1" y1="12" x2="3" y2="12"></line><line x1="21" y1="12" x2="23" y2="12"></line><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line></svg>
           </button>
-          <div class="user-profile">IN</div>
+          <div class="user-profile"><img src="profile.jpeg" alt="User Profile"></div>
         </div>
       </div>
 
