--- a/public/pages/adminDash.html
+++ b/public/pages/adminDash.html
@@ -495,7 +495,7 @@
                       </button>
                       
                     <div class="user-avatar">
-                        <img src="/api/placeholder/40/40" alt="Admin Avatar">
+                        <img src="./profile.jpeg" alt="Admin Avatar">
                     </div>
                 </div>
             </div>
