--- a/public/pages/libraryPage.html
+++ b/public/pages/libraryPage.html
@@ -728,7 +728,10 @@
                 <button class="theme-toggle" id="theme-toggle">
                     <i class="fas fa-moon"></i>
                 </button>
-                <div class="user-avatar">U</div>
+                <div class="user-avatar">
+                    S
+                </div>
+                
             </div>
         </div>
 
