--- a/public/pages/schedule.html
+++ b/public/pages/schedule.html
@@ -264,7 +264,7 @@
                 <input type="text" placeholder="Search schedule...">
             </div>
             <div class="user-profile">
-                <img src="/api/placeholder/40/40" alt="User Profile">
+                <img src="https://i.pravatar.cc/150?img=32" alt="User Profile">
             </div>
         </div>
 
