--- a/public/pages/studentCourseDet.html
+++ b/public/pages/studentCourseDet.html
@@ -22,7 +22,7 @@
       <div class="sidebar">
         <div class="sidebar-header">
           <div class="logo">
-            <i class="fas fa-graduation-cap"></i>
+            <!-- <i class="fas fa-graduation-cap"></i> -->
             <span>Padhakoo</span>
           </div>
         </div>
@@ -103,14 +103,16 @@
               alt="User"
               class="user-avatar"
             />
-            <div class="user-info">
-              <div class="user-name">Alex Johnson</div>
-              <div class="user-role">Student</div>
-            </div>
+            <a href="./profile.html" class="user-link">
+              <div class="user-info">
+                <div class="user-name">Sarah Johnson</div>
+                <div class="user-role">Student</div>
+              </div>
+            </a>
             <div class="profile-dropdown">
               <div class="dropdown-user-info">
                 <img src="https://i.pravatar.cc/150?img=32" alt="User" />
-                <div class="user-name">Alex Johnson</div>
+                <div class="user-name">Sarah Johnson</div>
                 <div class="user-role">Student ID: ST12345</div>
               </div>
               <a href="#" class="dropdown-link">
