--- a/public/pages/deadlines.html
+++ b/public/pages/deadlines.html
@@ -320,7 +320,7 @@
                 <input type="text" placeholder="Search courses, lessons...">
             </div>
             <div class="user-profile">
-                <img src="/api/placeholder/40/40" alt="User Profile">
+                <img src="https://i.pravatar.cc/150?img=32" alt="User Profile">
             </div>
         </div>
         
