--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -572,7 +572,7 @@
                     <i class="fas fa-moon"></i>
                 </div>
                 <div class="user-avatar">
-                    <img src="/api/placeholder/100/100" alt="User">
+                    <img src="https://i.pravatar.cc/150?img=32" alt="User">
                 </div>
             </div>
         </div>
@@ -583,7 +583,7 @@
         <div class="profile-container">
             <div class="profile-header">
                 <div class="profile-avatar">
-                    <img src="/api/placeholder/200/200" alt="Profile Image">
+                    <img src="https://i.pravatar.cc/150?img=32" alt="Profile Image">
                     <div class="edit-avatar">
                         <i class="fas fa-camera"></i>
                     </div>
