--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -106,14 +106,18 @@
         }
         
         .top-bar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 25px;
-            background-color: var(--card);
-            border-bottom: 1px solid var(--border);
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-        }
+    display: flex
+;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 25px;
+    background-color: var(--card);
+    border-bottom: 1px solid var(--border);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+    margin-top: -20px;
+    margin-left: -20px;
+    margin-right: -20px;
+}
         
         .search-box {
             flex: 0 0 400px;
